DFfullcopybackup/force-app/main/default/objects/SAP_Order_Integration_Settings__c/SAP_Order_Integration_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SAP Order Integration Settings</label>
</CustomObject>