DFfullcopybackup/force-app/main/default/objects/SAP_Order_Integration_Settings__c/fields/Inventory_Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Endpoint_Url__c</fullName>
    <description>Stores Endpoint Url for Inventory SAP Integration</description>
    <label>Inventory Endpoint Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>