DFfullcopybackup/force-app/main/default/objects/SAP_Order_Integration_Settings__c/fields/Mulesoft_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Mulesoft_Client_Secret__c</fullName>
    <label>Mulesoft Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>