DFfullcopybackup/force-app/main/default/objects/SAP_Order_Integration_Settings__c/fields/Order_Endpoint_Url__c.field-meta.xml
<CustomField>
    <fullName>Order_Endpoint_Url__c</fullName>
    <label>Order Endpoint Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>