DFfullcopybackup/force-app/main/default/objects/SAP_Order_Integration_Settings__c/fields/Order_X_IBM_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_X_IBM_Client_Id__c</fullName>
    <label>Order X IBM Client Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>