DFfullcopybackup/force-app/main/default/objects/SAP_Order_Integration_Settings__c/fields/X_IBM_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>X_IBM_Client_Id__c</fullName>
    <description>Stores X-IBM-Client-Id (Key) for SAP Order Integration</description>
    <label>X IBM Client Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>